sealed-secrets-demo/public/050-product-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage
  annotations:
    skupper.io/proxy: http
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - name: productpage
        image: docker.io/maistra/examples-bookinfo-productpage-v1:0.12.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
