sealed-secrets-demo/public/050-ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  annotations:
    skupper.io/proxy: http
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      containers:
      - name: ratings
        image: docker.io/maistra/examples-bookinfo-ratings-v1:0.12.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
