sealed-secrets-demo/public/060-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: productpage
  namespace: public
spec:
  host: >-
    productpage-public.fgiorget-cluster-153f1de160110098c1928a6c05e19444-0000.us-east.containers.appdomain.cloud
  to:
    kind: Service
    name: productpage
    weight: 100
  port:
    targetPort: productpage9080
  wildcardPolicy: None
